--- a/packages/overlays/IconPackPUISettingsOverlay/AndroidManifest.xml
+++ b/packages/overlays/IconPackPUISettingsOverlay/AndroidManifest.xml
@@ -19,6 +19,6 @@
     package="com.android.theme.icon_pack.pui.settings"
     android:versionCode="1"
     android:versionName="1.0">
-    <overlay android:targetPackage="com.android.settings" android:category="android.theme.customization.icon_pack.settings" android:priority="1"/>
+    <overlay android:targetPackage="com.android.settings" android:category="android.theme.customization.icon_pack" android:priority="1"/>
     <application android:label="Pui" android:hasCode="false"/>
 </manifest>
